# docker_cicd

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHEATSHEET.md  Makefile  README.md  airflow.db  direnvrc-template  folderstructure.txt  install.sh  make.inc  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/01-Docker/02-Docker-Compose/: .dockerignore  README.md  docker-compose-1.yml  docker-compose-2.yml  docker-compose-3.yml  dockerfile-fastapi  makefile  pyproject.toml  test_output.txt
01-Data-Storage-and-Batch-Pipelines/01-Docker/02-Docker-Compose/app/: database.py  main.py
01-Data-Storage-and-Batch-Pipelines/01-Docker/02-Docker-Compose/tests/: test_task_1.py  test_task_2.py  test_task_3.py
01-Data-Storage-and-Batch-Pipelines/02-SQL/00-Setup-Exercise/: README.md  create.sql  docker-compose.yml  pyproject.toml  update.sql
01-Data-Storage-and-Batch-Pipelines/02-SQL/00-Setup-Exercise/tests/: test_00_setup_exercise.py
01-Data-Storage-and-Batch-Pipelines/03-NoSQL/04-Graph/: README.md  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/03-NoSQL/04-Graph/tests/: test_all.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/00-Setup-Exercise/: .gitignore  README.md  docker-compose.yml  makefile  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/00-Setup-Exercise/tests/: test_docker_compose.py  test_dockerfile.py  test_files_and_folders.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/01-Breaking-Bad-Quotes/: .gitignore  Dockerfile  README.md  makefile  pyproject.toml  test_output.txt
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/01-Breaking-Bad-Quotes/dags/: breaking_bad_quotes.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/01-Breaking-Bad-Quotes/tests/: test_dag_config.py  test_python_functions.py  test_tasks_configs.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/02-Local-ETL/: .gitignore  README.md  makefile  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/02-Local-ETL/dags/: local_etl.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/02-Local-ETL/tests/: test_dag_config.py  test_python_functions.py  test_tasks_configs.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/Track-long/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/Track-long/dags/: long_track.py
01-Data-Storage-and-Batch-Pipelines/04-ETL-and-introduction-to-Airflow/Track-long/tests/: test_dag_config.py  test_python_functions.py  test_tasks_configs.py
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/: Makefile  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/00-Setup-Exercise/: Dockerfile  README.md  pyproject.toml
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/00-Setup-Exercise/app/: main.py
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/01-Streamlit/: .readthedocs.yaml  Dockerfile  README.md  docker-compose.yml  makefile
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/02-Track-long/: README.md
01-Data-Storage-and-Batch-Pipelines/05-Visualization-Best-Practices/Track-long/: Makefile  README.md  docker-compose.yml
01-Software-Engineering-Best-Practices/02-Best-Practices/01-Github-Flow/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/02-Image-transformation/: README.md  dataset.tfrecords  pyproject.toml
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/03-Pandas/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/04-Dash/: README.md  dashboard.py  pyproject.toml
01-Software-Engineering-Best-Practices/02-Python-For-Data-Engineering/05-Recap/: README.md  pyproject.toml  recap.ipynb
01-Software-Engineering-Best-Practices/03-SQL-Databases/01-Movies-DB/: Makefile  README.md  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/03-SQL-Databases/01-Movies-DB/tests/: test_2.py
01-Software-Engineering-Best-Practices/04-Backend-and-Database-Management/01-Twitter-CRUD/: Makefile  README.md  pyproject.toml  test.db  test_output.txt
01-Software-Engineering-Best-Practices/04-Data-Lakes/01-Scraping/: README.md  html.txt  pyproject.toml  test_output.txt
01-Software-Engineering-Best-Practices/04-Data-Lakes/04-Tagging/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Data-Lakes/06-Amundsen/: README.md  pyproject.toml
01-Software-Engineering-Best-Practices/04-Python-For-Data-Engineering/01-API-Requests/: README.md  pyproject.toml
02-Advanced-data-pipelines/02-Data-transformation/03-Apache-Beam/: README.md  pyproject.toml
02-Advanced-data-pipelines/05-Best-practices/01-Load-Testing/: .dockerignore  Dockerfile-fastapi  Makefile  README.md  docker-compose-task-2.yml  locust.py  pyproject.toml
02-Data-Storage-and-Batch-Pipelines/03-ETL-and-introduction-to-Airflow/00-Setup-Exercise/: .gitignore  README.md  makefile  pyproject.toml
02-Data-Storage-and-Batch-Pipelines/05-Kubernetes/01-Minikube-Kubectl/: Dockerfile  README.md  pyproject.toml
02-Data-Storage-and-Batch-Pipelines/05-Kubernetes/02-Streamlit-K8s-Deployment/: Dockerfile  README.md  pyproject.toml
02-Database-Fundamentals/01-SQL-Basics/03-Recommendation-system/: README.md  improved_text_search_query.sql  pyproject.toml  recommendation.py
02-Database-Fundamentals/01-SQL-Basics/04-Create-SQL/: README.md  pyproject.toml
02-Database-Fundamentals/02-Data-Warehousing/01-Adventure-works/: .env.sample  README.md  pyproject.toml
02-Database-Fundamentals/03-SQL-Databases/05-Extension/: README.md  pyproject.toml
common/moviecomment/: Dockerfile  Makefile  README.md  pyproject.toml
common/moviecomment/moviecomment/: api.py  helper.py  models.py
common/moviecomment/tests/: test_moviecomment.py
(+1344 files in other folders)
