[tool.poetry]
name = "data-engineering-solutions"
version = "0.1.0"
description = "Data engineering bootcamp by Le Wagon"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
