[tool.poetry]
name = "05-Visualization-Best-Practices"
version = "0.1.0"
description = ""
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
streamlit = "^1.9.1"
SQLAlchemy = "^1.4.37"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
watchdog = "^2.1.8"
pytest-mock = "^3.7.0"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"