[tool.poetry]
name = "01-docker"
version = "0.1.0"
description = "Week 1 Day 1 - Docker Advanced by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
alembic = "uvicorn[standard]"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
PyYAML = "^6.0"
dockerfile = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
