[tool.poetry]
name = "04-ETL-and-introduction-to-Airflow/00-Setup-Exercise"
version = "0.1.0"
description = "Data engineering bootcamp by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8.12"
apache-airflow = "2.2.5"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
PyYAML = "^6.0"
dockerfile = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
