[tool.poetry]
name = "01-Data-Storage-and-Batch-Pipeline/04-ETL-and-introduction-to-Airflow/01-Breaking-Bad-Quotes"
version = "0.1.0"
description = "Data engineering bootcamp by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "2.3.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
pytest-mock = "3.2.0"
pytest-responses = "0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
