[tool.poetry]
name = "01-github-flow"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <ogiles@email.com>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
pytest = "^7.2.0"
pylint = "^2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
