[tool.poetry]
name = "pandas-pipeline"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
packages = [{include = "pandas_pipeline"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.3"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
