[tool.poetry]
name = "04-dash"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dash = "^2.13.0"
dash-core-components = "^2.0.0"
dash-html-components = "^2.0.0"
plotly = "^5.17.0"
pandas = "^1.5.3"
dash-bootstrap-components = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
