[tool.poetry]
name = "00-setup-exercise"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
lewagonde = { path = "../../../common/lewagonde/", develop = true }
csvkit = "^1.0.7"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true

[virtualenvs]
in-project = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
]
addopts = "-v --color=yes"
