[tool.poetry]
name = "twitter-api"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <ogiles@email.com>"]
packages = [{include = "twitter_api"}]

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.4.42"
psycopg2-binary = "^2.9.5"
alembic = "^1.8.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"
fastapi = "^0.86.0"
uvicorn = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
