[tool.poetry]
name = "01-scraping"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
packages = [{include = "scraper"}]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
pandas = "^1.5.3"
requests-mock = "^1.11.0"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
