[tool.poetry]
name = "06-amundsen"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
amundsen-databuilder = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
