[tool.poetry]
name = "05-best-practices"
version = "0.1.0"
description = ""
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
locust = "^2.9.0"
numpy = "^1.22.4"
pandas = "^1.4.2"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"
sentry-sdk = "^1.5.12"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
PyYAML = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
