[tool.poetry]
name = "01-Data-Storage-and-Batch-Pipeline/04-ETL-and-introduction-to-Airflow/00-Setup-Exercise"
version = "0.1.0"
description = "Data engineering bootcamp by Le Wagon"
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "2.3.0"
psycopg2-binary = "^2.9.3"


[tool.poetry.dev-dependencies]
pytest = "7.1.2"
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"
PyYAML = "^6.0"
dockerfile = "^3.2.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
