[tool.poetry]
name = "01-minikube-kubectl"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.com>"]
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
