[tool.poetry]
name = "viz k8s"
version = "0.1.0"
description = ""
authors = ["S. Saunier <seb@lewagon.org>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9.7 || >3.9.7,<4.0.0"
streamlit = "1.15.0"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "7.1.2"
ipython = "^8.4.0"
black = "^22.3.0"
isort = "^5.10.1"
watchdog = "^2.1.8"
pytest-mock = "^3.7.0"
Sphinx = "^5.0.1"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 160
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 160
multi_line_output = 3
include_trailing_comma = true
