[tool.poetry]
name = "lwsql"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
packages = [{include = "lwsql"}]

[tool.poetry.dependencies]
python = "^3.8"
pyparsing = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.0.0"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
