[tool.poetry]
name = "01-adventure-works"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
packages = [{include = "pipeline"}]

[tool.poetry.dependencies]
python = "^3.8"
google-cloud-bigquery = "^3.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
