[tool.poetry]
name = "05-extension"
version = "0.1.0"
description = ""
authors = ["Oliver Giles <oliver.giles@lewagon.org>"]
readme = "README.md"
packages = [{include = "vector_movies"}]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.34.0"
ipython = "^8.0.0"
torch = {url = "http://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp38-cp38-linux_x86_64.whl#sha256=8046f49deae5a3d219b9f6059a1f478ae321f232e660249355a8bf6dcaa810c1"}
pandas = "^2.0.0"
sqlalchemy = "^2.0.22"
pgvector = "^0.2.3"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
